--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
