--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/paymybuddytest?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=mysql!
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
